RESOLVED FIXED49765
[Qt] Memory leak in QWebInspector
https://bugs.webkit.org/show_bug.cgi?id=49765
Summary [Qt] Memory leak in QWebInspector
Yi Shen
Reported 2010-11-18 15:22:17 PST
should delete QWebInspectorPrivate in ~QWebInspector()
Attachments
first try (992 bytes, patch)
2010-11-18 15:28 PST, Yi Shen
no flags
prevent double delete by QWebPagePrivate (1.06 KB, patch)
2010-11-18 15:44 PST, Yi Shen
kling: review-
remove unnecessary stuff (1004 bytes, patch)
2010-11-19 04:21 PST, Yi Shen
no flags
Yi Shen
Comment 1 2010-11-18 15:28:26 PST
Created attachment 74304 [details] first try
Yi Shen
Comment 2 2010-11-18 15:44:36 PST
Created attachment 74306 [details] prevent double delete by QWebPagePrivate
Andreas Kling
Comment 3 2010-11-18 21:16:22 PST
Comment on attachment 74306 [details] prevent double delete by QWebPagePrivate View in context: https://bugs.webkit.org/attachment.cgi?id=74306&action=review Patch is fine, but: > WebKit/qt/Api/qwebinspector.cpp:94 > + if (d) { Unnecessary if- "delete d" is a no-op if !d. > WebKit/qt/Api/qwebinspector.cpp:96 > + // Prevent double delete by QWebPagePrivate Unnecessary comment.
Yi Shen
Comment 4 2010-11-19 04:21:49 PST
Created attachment 74367 [details] remove unnecessary stuff Thanks Kling, u r right :)
Laszlo Gombos
Comment 5 2010-11-19 04:53:04 PST
Comment on attachment 74367 [details] remove unnecessary stuff LGTM, r+.
WebKit Commit Bot
Comment 6 2010-11-19 21:20:39 PST
Comment on attachment 74367 [details] remove unnecessary stuff Clearing flags on attachment: 74367 Committed r72466: <http://trac.webkit.org/changeset/72466>
WebKit Commit Bot
Comment 7 2010-11-19 21:20:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.