2010-11-19  Yi Shen  <yi.4.shen@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Memory leak in QWebInspector
        https://bugs.webkit.org/show_bug.cgi?id=49765

        Delete QWebInspectorPrivate in ~QWebInspector()

        * Api/qwebinspector.cpp:
        (QWebInspector::~QWebInspector):

Canonical link: https://commits.webkit.org/62928@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72466 268f45cc-cd09-0410-ab3c-d52691b4dbfc